<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#456EAE"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/VIN_image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vin" />

    <SearchView
        android:id="@+id/vin_search_bar"
        android:layout_width="375dp"
        android:layout_height="62dp"
        android:background="#FAFAFA"
        android:iconifiedByDefault="false"
        android:inputType="textCapCharacters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/search_button_text"
        app:layout_constraintEnd_toEndOf="@+id/vin_search_bar"
        app:layout_constraintStart_toStartOf="@+id/vin_search_bar"
        app:layout_constraintTop_toBottomOf="@+id/vin_search_bar"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:onClick="vin_search"/>

    <TextView
        android:id="@+id/textView_vin_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vin_description"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/vin_search_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


</androidx.constraintlayout.widget.ConstraintLayout>